--- a/GraphQL/package.json
+++ b/GraphQL/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.23.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "mongoose": "^5.12.4"
   }
 }
