--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "url-shortener",
   "version": "1.0.0",
   "description": "url-shortener for REST and GraphQL",
-  "main": "Index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node Index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "url-shortener"
